2014-11-10  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/Makefile [nptl]
	(sysdep_routines): Add lock elision objects.
	* sysdeps/unix/sysv/linux/powerpc/bits/pthreadtypes.h
	[pthread_mutex_t] (__spins): Rework to add lock elision field.
	[pthread_mutex_t] (__elision): Add field.
	[__PTHREAD_SPINS]: Adjust to init lock elision field.
	* sysdeps/unix/sysv/linux/powerpc/elision-conf.c: New file: lock
	elision definitions for powerpc.
	* sysdeps/unix/sysv/linux/powerpc/elision-lock.c: New file:
	implementation of lock elision for powerpc.
	* sysdeps/unix/sysv/linux/powerpc/elision-timed.c: New file:
	implementation of timed lock elision for powerpc.
	* sysdeps/unix/sysv/linux/powerpc/elision-trylock.c: New file:
	implementation of trylock with lock elision for powerpc.
	* sysdeps/unix/sysv/linux/powerpc/elision-unlock.c: New file:
	implementaion of unlock for lock elision for powerpc.
	* sysdeps/unix/sysv/linux/powerpc/force-elision.h: New file:
	automatic enable lock elision for mutexes.
	* sysdeps/unix/sysv/linux/powerpc/htm.h: New file: hardware
	transaction execution definitions for powerpc.
	* sysdeps/unix/sysv/linux/powerpc/lowlevellock.h: New file: add TLE
	definitions.
	* sysdeps/unix/sysv/linux/powerpc/pthread_mutex_cond_lock.c: New file.
	* sysdeps/unix/sysv/linux/powerpc/pthread_mutex_lock.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/pthread_mutex_timedlock.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/pthread_mutex_trylock.c: Likewise.

2014-11-10  Andrew Senkevich  <andrew.n.senkevich@gmail.com>

	* configure.ac: Updated check of minimal required version to
	2.22.
	* manual/install.texi (Tools for Compilation): Updated version
	number.
	* configure: Regenerated.
	* INSTALL: Likewise.

2014-11-07  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/unix/sysv/linux/m68k/localplt.data (ld.so): Remove
	__tls_get_addr.

2014-11-07  Joseph Myers  <joseph@codesourcery.com>
